--- a/.github/workflows/image-builder-test.yml
+++ b/.github/workflows/image-builder-test.yml
@@ -9,6 +9,7 @@ env:
   UCI_CUSTOM_FILE: test/uci-custom
   PACKAGES_LIST_FILE: test/packages.list
   PACKAGES_FOLDER: test/packages
+  ROOTFS_PARTSIZE: 1024   # MB
   DOWNLOAD_URL: https://downloads.immortalwrt.org/releases/23.05.4/targets/x86/64/immortalwrt-imagebuilder-23.05.4-x86-64.Linux-x86_64.tar.xz
   TZ: Asia/Shanghai
 
@@ -46,6 +47,10 @@ jobs:
         sudo sed -i 's/^CONFIG_VDI_IMAGES=y/# CONFIG_VDI_IMAGES is not set/' $CONFIG_FILE
         sudo sed -i 's/^CONFIG_VMDK_IMAGES=y/# CONFIG_VMDK_IMAGES is not set/' $CONFIG_FILE
         sudo sed -i 's/^CONFIG_VHDX_IMAGES=y/# CONFIG_VHDX_IMAGES is not set/' $CONFIG_FILE
+        # Reconfigure the rootfs partition size (for x86 build only)
+        if [[ -z ${{ env.ROOTFS_PARTSIZE }} ]] && [[ ${{ env.PROFILE }} = "generic" ]]; then
+          sudo sed -i 's/CONFIG_TARGET_ROOTFS_PARTSIZE=.*/CONFIG_TARGET_ROOTFS_PARTSIZE=${{ env.ROOTFS_PARTSIZE }}/g' $CONFIG_FILE
+        fi
 
     - name: Copy files
       run: |
@@ -63,7 +68,7 @@ jobs:
       run: |
         cd $ROOT_DIRECTORY
         PACKAGES=$(cat $ROOT_DIRECTORY/files/packages.list | tr '\n' ' ')
-        sudo make image PROFILE="$PROFILE" PACKAGES="$PACKAGES" FILES="files" CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+        sudo make image PROFILE="$PROFILE" PACKAGES="$PACKAGES" FILES="files"
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         # Organize files
         sudo mkdir -p /tmp/bin_firmware
