--- a/.github/workflows/image-builder-test.yml
+++ b/.github/workflows/image-builder-test.yml
@@ -9,7 +9,7 @@ env:
   UCI_CUSTOM_FILE: test/uci-custom
   PACKAGES_LIST_FILE: test/packages.list
   PACKAGES_FOLDER: test/packages
-  ROOTFS_PARTSIZE: 2048   # MB
+  # ROOTFS_PARTSIZE: 512   # Reconfigure the rootfs partition size (for x86 build only), variable set in MB
   DOWNLOAD_URL: https://downloads.immortalwrt.org/releases/23.05.4/targets/x86/64/immortalwrt-imagebuilder-23.05.4-x86-64.Linux-x86_64.tar.xz
   TZ: Asia/Shanghai
 
