--- a/.github/workflows/image-builder-x86.yml
+++ b/.github/workflows/image-builder-x86.yml
@@ -31,11 +31,11 @@ jobs:
     - name: Download and extract Image Builder
       run: |
         wget -O /tmp/imagebuilder.tar.zst $DOWNLOAD_URL
-        sudo tar -C /tmp --use-compress-program=unzstd -xvf /tmp/imagebuilder.tar.zst
+        sudo tar -C /tmp -I zstd -xvf /tmp/imagebuilder.tar.zst
 
     - name: Set Image Builder root directory
       run: |
-        ROOT_DIRECTORY=$(basename $DOWNLOAD_URL .tar.xz)
+        ROOT_DIRECTORY=$(basename $DOWNLOAD_URL .tar.zst)
         echo "ROOT_DIRECTORY=/tmp/$ROOT_DIRECTORY" >> $GITHUB_ENV
 
     - name: Modify .config file
