--- a/.github/workflows/image-builder-x86.yml
+++ b/.github/workflows/image-builder-x86.yml
@@ -10,7 +10,7 @@ env:
   PACKAGES_LIST_FILE: packages.list-x86
   PACKAGES_FOLDER: packages-x86
   # ROOTFS_PARTSIZE: 512   # Reconfigure the rootfs partition size (for x86 build only), variable set in MB
-  DOWNLOAD_URL: https://downloads.immortalwrt.org/releases/24.10.0/targets/x86/64/immortalwrt-imagebuilder-24.10.0-x86-64.Linux-x86_64.tar.zst
+  DOWNLOAD_URL: https://downloads.immortalwrt.org/releases/23.05.4/targets/x86/64/immortalwrt-imagebuilder-23.05.4-x86-64.Linux-x86_64.tar.xz
   TZ: Asia/Shanghai
 
 jobs:
@@ -26,16 +26,16 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libncurses5-dev libncursesw5-dev zlib1g-dev gawk git gettext libssl-dev xsltproc wget unzip python3 qemu-utils genisoimage zstd
+        sudo apt-get install -y build-essential libncurses5-dev libncursesw5-dev zlib1g-dev gawk git gettext libssl-dev xsltproc wget unzip python3 qemu-utils genisoimage
 
     - name: Download and extract Image Builder
       run: |
-        wget -O /tmp/imagebuilder.tar.zst $DOWNLOAD_URL
-        sudo tar -C /tmp -I zstd -xvf /tmp/imagebuilder.tar.zst
+        wget -O /tmp/imagebuilder.tar.xz $DOWNLOAD_URL
+        sudo tar -C /tmp -xvf /tmp/imagebuilder.tar.xz
 
     - name: Set Image Builder root directory
       run: |
-        ROOT_DIRECTORY=$(basename $DOWNLOAD_URL .tar.zst)
+        ROOT_DIRECTORY=$(basename $DOWNLOAD_URL .tar.xz)
         echo "ROOT_DIRECTORY=/tmp/$ROOT_DIRECTORY" >> $GITHUB_ENV
 
     - name: Modify .config file
