--- a/.github/workflows/image-builder-test.yml
+++ b/.github/workflows/image-builder-test.yml
@@ -1,4 +1,4 @@
-name: ImmortalWrt TEST
+name: ImmortalWrt TEST v25.10
 on:
   push:
     branches: [ "master" ]
@@ -6,9 +6,9 @@ on:
 
 env:
   PROFILE: generic
-  UCI_CUSTOM_FILE: uci-custom
-  PACKAGES_LIST_FILE: packages.list
-  PACKAGES_FOLDER: packages
+  UCI_CUSTOM_FILE: test/uci-custom
+  PACKAGES_LIST_FILE: test/packages.list
+  PACKAGES_FOLDER: test/packages
   # ROOTFS_PARTSIZE: 512   # Reconfigure the rootfs partition size (for x86 build only), variable set in MB
   DOWNLOAD_URL: https://downloads.immortalwrt.org/releases/24.10.0/targets/x86/64/immortalwrt-imagebuilder-24.10.0-x86-64.Linux-x86_64.tar.zst
   TZ: Asia/Shanghai
